added image markers

--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
 
     <div id="dot" class="hidden cursor-pointer" x-data @markers-updated.window="drawDot(event.detail)">
         <img class="dot-image w-12 h-12 rounded-full" />
-        <div class="dot-details p-4 hidden">
+        <div class="dot-details p-3 hidden">
             <div class="dot-address mb-4 hidden"></div>
-            <div class="dot-title text-xl font-bold mb-4"></div>
-            <div class="dot-comment text-md"></div>
+            <div class="dot-title text-xl font-bold mb-1"></div>
+            <div class="dot-comment text-lg"></div>
         </div>
     </div>
 
