fixed dot-comment leading

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="dot-details p-3 hidden">
             <div class="dot-address mb-4 hidden"></div>
             <div class="dot-title text-xl font-bold mb-1"></div>
-            <div class="dot-comment text-lg"></div>
+            <div class="dot-comment text-lg leading-tight"></div>
         </div>
     </div>
 
