--- a/index.html
+++ b/index.html
@@ -224,7 +224,14 @@
             signInWithEmail()
         }
     </script>
-
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+    </style>
     <style>
         /* The popup bubble styling. */
         .popup-bubble {
